#10 ISSUE: Added content to ViewPager pages. #12 ISSUE: Added Web Intents to ViewPager pages to provide online information for the user.

--- a/MedsTracker2/app/src/main/AndroidManifest.xml
+++ b/MedsTracker2/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="http" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <!-- The BROWSABLE category is required to get links from web pages. -->
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
         </activity>
     </application>
 
